2005-07-26  Bruno coudoin  <bruno.coudoin@free.fr>

	- Renamed the official name of gcompris edit is now gcompris administration
	  It is now started with gcompris -a
	- Reworked modules statup to work like Yves did
	- Reworked class edit to also edit the class name and teacher.
	  In the end it will not be possible to edit in the tables anymore.
	  This still does not update the parent list.

	* boards/skins/babytoy/skin.xml:
	* boards/skins/default/skin.xml:
	* boards/skins/linha_verde/skin.xml:
	* boards/skins/pink/skin.xml:
	* gcompris-edit.desktop.in:
	* src/boards/python/admin/board_list.py:
	* src/boards/python/admin/class_edit.py:
	* src/boards/python/admin/class_list.py:
	* src/boards/python/admin/group_list.py:
	* src/boards/python/admin/module.py:
	* src/boards/python/admin/module_boards.py:
	* src/boards/python/admin/module_groups.py:
	* src/boards/python/admin/module_profiles.py:
	* src/boards/python/admin/module_users.py:
	* src/boards/python/admin/profile_list.py:
	* src/boards/python/admin/user_list.py:
	* src/boards/python/administration.py:
	* src/gcompris/gcompris.c:

2005-07-26  Yves Combe  <yves@ycombe.net>

	gcompris_combo_box (gcompris.combo_box) configuration fonction for text combobox.

	* src/boards/colors.c: (colors_config_start):
	* src/boards/py-mod-gcompris.c: (py_gcompris_boolean_box),
	(py_gcompris_combo_box):
	* src/boards/python/tuxpaint.py:
	* src/gcompris/board_config.c: (gcompris_configuration_window),
	(gcompris_boolean_box), (gcompris_combo_box_changed),
	(gcompris_combo_box):
	* src/gcompris/board_config.h:

2005-07-25  Yves Combe  <yves@ycombe.net>

	fix compilation error (GComprisProfile  in py-gcompris-properties.c)
	add label option in gcompris_configuration_window fix tuxpaint.py and colors.c for use it.

	* src/boards/colors.c: (colors_config_start):
	* src/boards/py-gcompris-properties.c:
	(pyGcomprisPropertiesType_getattr):
	* src/boards/py-mod-gcompris.c: (py_gcompris_configuration_window),